--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "tailwindcss": "^3.2.1",
         "vite": "^6.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "apexcharts": "^4.4.0",
+        "vue-multiselect": "^3.2.0",
+        "vue3-apexcharts": "^1.8.0"
     }
 }
